--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,14 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.26.1",
     "boostrap": "^2.0.0",
-    "bootstrap": "^4.2.1",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "3.3.1"
+    "bootstrap": "^5.1.3",
+    "react": "^16.14.0",
+    "react-bootstrap": "^2.2.2",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
