--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "google-books-search-mern",
   "version": "1.0.0",
   "engines": {
-    "node": "14.18.12"
+    "node": "14.x"
   },
   "description": "",
   "main": "server.js",
